aggiunta stringa per Riccardo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <p id="result">Risultato</p>
 
+    <p id="Result">Per Riccardo</p>
+
     <script src="./script/myscript.js"></script>
 </body>
 </html>
