inserimento di bootstrap

--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
-</head>
-<body>
-    <h1>Questo è un esercizio con javascript</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap js -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">    <title>Password generator</title>
+    </head>
+    <body class="container">
+        <h1 class="my-5">Questo è un esercizio con javascript</h1>
 
-    <p id="name">Nome</p>
+        <p id="my_name">Nome</p>
 
-    <p id="surname">Cognome</p>
+        <p id="my_surname">Cognome</p>
 
-    <p id="color">Colore</p>
+        <p id="my_color">Colore</p>
 
-    <p id="result">Risultato</p>
+        <p id="my_result" class="text-success">Risultato</p>
 
-    <p id="Result">Per Riccardo</p>
+        <p id="my_Result">Per Riccardo</p>
 
-    <script src="./script/myscript.js"></script>
-</body>
+        <script src="./script/myscript.js"></script>
+    </body>
 </html>
